<resources>
    <string name="app_name">易识别</string>
    <string name="name">名 称：</string>
    <string name="score">概 率：</string>
    <string name="plant">植 物识别</string>
    <string name="animal">动 物识别</string>
    <string name="ingredient">果 蔬识别</string>
    <string name="general">通 用识别</string>
    <string name="car_type">车 型识别</string>

    <string name="home">首页</string>
    <string name="my">我的</string>
    <string name="written_records">文字记录</string>
    <string name="app_explain">软件说明</string>
    <string name="app_evaluation">软件评价</string>
    <string name="version_checked">版本检测</string>
    <string name="app_title">精准识别、快速、准确</string>
    <string name="details_title">识别详情</string>
    <string name="app_info">\t\t\t本软件主要用于图片识别，暂时可识别动物、植物、果蔬、车型等。通用识别可识别所有物体，但不是精确识别，想要具体识别还需要到具体的模块去识别。
        由于本软件是个人项目，成本有限，因此每种类型的识别都有次数限制:\n
        通用识别：500次/天免费\n
        车型识别：500次/天免费\n
        动物识别：500次/天免费\n
        植物识别：500次/天免费\n
        果蔬识别：总剩余免费2999次\n
        初期功能暂时只有这些，后续版本会陆续迭代新的识别功能或其他功能。
        感谢大家的支持！！
    </string>
    <!--如有使用问题或建议大家可以加qq群785663376反应。-->
</resources>
