<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
                name="model"
                type="com.yz.baiduai.viewmodel.MainViewModel"/>
    </data>


    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_200"
                android:background="@mipmap/bg_top">

            <ImageView
                    android:id="@+id/iv_logo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@mipmap/ic_launcher"
                    android:layout_marginStart="@dimen/dp_20"
                    android:layout_centerVertical="true"
                    tools:ignore="ContentDescription"/>

            <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="@dimen/dp_10"
                    android:textColor="@color/gray_ef"
                    android:text="@string/app_title"
                    android:layout_toEndOf="@+id/iv_logo"/>

        </RelativeLayout>

        <android.support.v4.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                <TextView
                        android:id="@+id/tv_written_records"
                        style="@style/my_item"
                        android:layout_marginTop="@dimen/dp_13"
                        android:background="@drawable/bg_item_white_gary"
                        android:drawableEnd="@mipmap/icon_arrow_right"
                        android:text="@string/written_records"
                        android:visibility="gone"/>

                <TextView
                        android:id="@+id/tv_app_explain"
                        style="@style/my_item"
                        android:layout_marginTop="@dimen/dp_13"
                        android:background="@drawable/bg_item_white_gary"
                        android:drawableEnd="@mipmap/icon_arrow_right"
                        android:text="@string/app_explain"/>

                <TextView
                        android:id="@+id/tv_app_evaluation"
                        style="@style/my_item"
                        android:layout_marginTop="@dimen/dp_1"
                        android:background="@drawable/bg_item_white_gary"
                        android:drawableEnd="@mipmap/icon_arrow_right"
                        android:text="@string/app_evaluation"/>

                <TextView
                        android:id="@+id/tv_version_checked"
                        style="@style/my_item"
                        android:layout_marginTop="@dimen/dp_13"
                        android:background="@drawable/bg_item_white_gary"
                        android:drawableEnd="@mipmap/icon_arrow_right"
                        android:text="@string/version_checked"/>

            </LinearLayout>

        </android.support.v4.widget.NestedScrollView>

    </LinearLayout>

</layout>
